--- a/src/app/dashboard/user-profile/user-profile.component.css
+++ b/src/app/dashboard/user-profile/user-profile.component.css
@@ -1,6 +1,15 @@
-.max-width{
+.max-width
+{
     width: 390px;
 }
-.btn-height{
+.btn-height
+{
     height: 30px;
+}
+.btn-disabled:disabled{
+    background-color: grey;
+    cursor:auto;
+}
+input.ng-invalid.ng-dirty.ng-touched {
+    @apply border-red-600
 }
