--- a/src/app/account/signup/signup.component.css
+++ b/src/app/account/signup/signup.component.css
@@ -4,3 +4,10 @@
 .btn-height{
     height: 30px;
 }
+.btn-disabled:disabled{
+    background-color: grey;
+    cursor:auto;
+}
+input.ng-invalid.ng-dirty.ng-touched {
+    @apply border-red-600
+}
