--- a/src/app/dashboard/transactions/transactions.component.html
+++ b/src/app/dashboard/transactions/transactions.component.html
@@ -181,7 +181,7 @@
         <!-- page transactions end -->
 
         <!-- page navigation start -->
-        <nav class="bg-white flex items-center justify-between border-t border-gray-200 page-nav w-full ">
+        <!-- <nav class="bg-white flex items-center justify-between border-t border-gray-200 page-nav w-full ">
             <div class="relative w-28 h-4 font-medium">
                 <a class=" page-nav-btns">
                     <i class="fas fa-arrow-left mr-2 text-sm"></i>
@@ -200,7 +200,7 @@
                 </a>
             </div>
             
-        </nav>
+        </nav> -->
         <!-- page navigation end -->
         <div class="m-8 items-center" >
             <button 
